--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "better-sqlite3": "^8.0.1",
     "bootstrap": "^5.2.3",
+    "csv": "^6.2.5",
     "jquery": "^3.6.3",
     "sqlite3": "^5.1.4"
   }
