--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
   "name": "events-manager",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.1.0-alpha",
+  "description": "Events manager.",
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron ."
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make"
   },
   "author": "Oscar Urselli",
   "license": "MIT",
   "devDependencies": {
+    "@electron-forge/cli": "^6.0.4",
+    "@electron-forge/maker-deb": "^6.0.4",
+    "@electron-forge/maker-rpm": "^6.0.4",
+    "@electron-forge/maker-squirrel": "^6.0.4",
+    "@electron-forge/maker-zip": "^6.0.4",
     "@electron/rebuild": "^3.2.10",
     "electron": "^22.0.0"
   },
@@ -17,6 +24,7 @@
     "better-sqlite3": "^8.0.1",
     "bootstrap": "^5.2.3",
     "csv": "^6.2.5",
+    "electron-squirrel-startup": "^1.0.0",
     "jquery": "^3.6.3",
     "sqlite3": "^5.1.4"
   }
