--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@electron-forge/maker-squirrel": "^6.0.4",
     "@electron-forge/maker-zip": "^6.0.4",
     "@electron/rebuild": "^3.2.10",
-    "electron": "^22.0.0"
+    "electron": "^22.0.0",
+    "pug": "^3.0.2"
   },
   "dependencies": {
     "better-sqlite3": "^8.0.1",
