--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "events-manager",
-  "version": "0.2.1-alpha",
+  "version": "0.3.1-alpha",
   "description": "Events manager.",
   "main": "main.js",
   "scripts": {
-    "test": "electron .",
+    "test": "node compile.js && electron .",
     "start": "electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make"
